<resources>
    <string name="app_name">Multi Fracionados</string>
    <string name="entrar">Entrar</string>
    <string name="informa_es">Informações</string>
    <string name="testes">Testes</string>
    <string name="produtos">Produtos</string>
    <string name="curiosidades">Curiosidades</string>
    <string name="imagem_da_logo">Imagem da logo</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
