<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|bottom"
        android:layout_weight="0.41"
        android:gravity="top|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="#cd1584"
            android:text="@string/entrar"
            android:textColor="#FFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="#cd1584"
            android:text="@string/informa_es"
            android:textColor="#FFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btTests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="#cd1584"
            android:text="@string/testes"
            android:textColor="#FFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="#cd1584"
            android:text="@string/produtos"
            android:textColor="#FFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btCuriosities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="#cd1584"
            android:text="@string/curiosidades"
            android:textColor="#FFF"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
